# Vox

./: README.md  TODO.md
.circleci/: config.yml
media/config/: options.ini
project/2012/: Vox.vcxproj
project/2013/: Vox.vcxproj
project/2015/: Vox.vcxproj  Vox.vcxproj.filters
project/2019/: Vox.vcxproj  Vox.vcxproj.filters
source/: CMakeLists.txt  VoxGUI.cpp  VoxGame.cpp  VoxGame.h  VoxRender.cpp  VoxUpdate.cpp  VoxWindow.cpp  VoxWindow.h
source/AudioManager/: AudioManager.cpp  AudioManager.h  CMakeLists.txt
source/Enemy/: Enemy.cpp  EnemyManager.cpp  EnemySpawner.cpp
source/GameGUI/: ActionBar.cpp  CharacterGUI.cpp  CraftingGUI.cpp  InventoryGUI.cpp  LootGUI.cpp
source/Instance/: InstanceManager.cpp  InstanceManager.h
source/Inventory/: InventoryManager.cpp
source/Items/: Item.cpp  ItemManager.cpp  ItemSpawner.cpp  StatAttribute.cpp
source/Maths/: 3dmaths.h
source/NPC/: NPC.cpp  NPC.h  NPCManager.cpp
source/Particles/: BlockParticle.cpp  BlockParticleEffect.cpp  BlockParticleEffect.h  BlockParticleEmitter.cpp  BlockParticleManager.cpp  BlockParticleManager.h
source/Player/: Player.cpp  PlayerCombat.cpp
source/Projectile/: Projectile.cpp
source/Quests/: Quest.cpp  QuestJournal.cpp
source/Renderer/: Renderer.cpp  Renderer.h  glsl.cpp  tga.cpp  tga.h
source/TextEffects/: TextEffectsManager.h
source/blocks/: BiomeManager.cpp  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h
source/freetype/: CMakeLists.txt
source/frontend/: FrontendManager.cpp
source/frontend/Pages/: CreateCharacter.cpp  CreateCharacter.h  Credits.cpp  ModMenu.cpp  OptionsMenu.h  PauseMenu.cpp  SelectCharacter.cpp
source/gui/: TreeView.cpp  abstractbutton.cpp  abstractbutton.h  button.cpp  button.h  checkbox.cpp  checkbox.h  component.h  container.h  directdrawrectangle.h  draggablerenderrectangle.cpp  draggablerenderrectangle.h  focuslistener.h  formattedlabel.cpp  formattedlabel.h  guiwindow.h  label.h  menu.cpp  menu.h  menuitem.cpp  menuitem.h  mouselistener.h  multilinetextbox.cpp  multilinetextbox.h  optionbox.cpp  optionbox.h  optioncontroller.cpp  optioncontroller.h  pulldownmenu.cpp  pulldownmenu.h  renderrectangle.cpp  renderrectangle.h  scrollbar.cpp  scrollbar.h  selectionmanager.cpp  slider.cpp  slider.h  textbox.cpp  textbox.h  titlebar.cpp  (+2 more)
source/models/: MS3DAnimator.cpp  MS3DAnimator.h  MS3DModel.cpp  MS3DModel.h  QubicleBinary.cpp  QubicleBinary.h  VoxelCharacter.cpp  VoxelCharacter.h  VoxelObject.cpp  VoxelWeapon.cpp  objmodel.cpp
source/scenery/: SceneryManager.cpp
source/utils/: FileUtils.h
